// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test-data service "users" (1) has an [1;93masync[0;90m function [1;93mgetUser()[0;90m which - when used with valid ID - [0;92mresolves[0;90m as expected [-> check snapshot 1]: > user1 < 1`] = `
{
  "currStep": 8,
  "currentLessons": [
    {
      "doneAt": "(TS:-2min)",
      "flectionId": "(ID:adjective-flection3)",
      "result": "correct",
      "wordId": "(ID:word2)",
    },
    {
      "flectionId": "(ID:verb-flection1)",
      "wordId": "(ID:word1)",
    },
  ],
  "currentSession": {
    "startedAt": "(TS:-10min)",
  },
  "id": "(ID:user1)",
  "learnPath": [
    {
      "flectionId": "(ID:adjective-flection2)",
      "result": 100,
      "step": 7,
      "wordId": "(ID:word3)",
    },
    {
      "flectionId": "(ID:verb-flection4)",
      "result": null,
      "step": 8,
      "wordId": "(ID:word1)",
    },
  ],
  "login": "user1",
  "name": "User 1",
}
`;

exports[`Test-data service "users" (2) has an [1;93masync[0;90m function [1;93mlistAllUsers()[0;90m which - when used w/o arguments - [0;92mresolves[0;90m as expected [-> check snapshot 2]: > all users < 1`] = `
[
  {
    "currStep": 8,
    "currentLessons": [
      {
        "doneAt": "(TS:-2min)",
        "flectionId": "(ID:adjective-flection3)",
        "result": "correct",
        "wordId": "(ID:word2)",
      },
      {
        "flectionId": "(ID:verb-flection1)",
        "wordId": "(ID:word1)",
      },
    ],
    "currentSession": {
      "startedAt": "(TS:-10min)",
    },
    "id": "(ID:user1)",
    "learnPath": [
      {
        "flectionId": "(ID:adjective-flection2)",
        "result": 100,
        "step": 7,
        "wordId": "(ID:word3)",
      },
      {
        "flectionId": "(ID:verb-flection4)",
        "result": null,
        "step": 8,
        "wordId": "(ID:word1)",
      },
    ],
    "login": "user1",
    "name": "User 1",
  },
  {
    "currStep": 0,
    "id": "(ID:user2)",
    "learnPath": [],
    "login": "user2",
    "name": "User 2",
  },
]
`;

exports[`Test-data service "users" (3) has an [1;93masync[0;90m function [1;93mgetActiveWord()[0;90m which - when used with valid ID - [0;92mresolves[0;90m as expected [-> check snapshot 3]: > 1st activeWord of user1 < 1`] = `
{
  "events": [
    {
      "timestamp": "(TS:-5d)",
      "type": "add",
    },
    {
      "flectionId": "(ID:verb-flection3)",
      "result": "wrong",
      "timestamp": "(TS:-2d)",
      "type": "flection-result",
    },
    {
      "flectionId": "(ID:verb-flection1)",
      "result": "correct",
      "timestamp": "(TS:yesterday)",
      "type": "flection-result",
    },
  ],
  "id": "(ID:user1-activeWord1)",
  "learnProgress": [
    {
      "changedAt": null,
      "currGroup": 0,
      "flectionId": "(ID:verb-flection1)",
    },
    {
      "changedAt": null,
      "currGroup": 0,
      "flectionId": "(ID:verb-flection2)",
    },
    {
      "changedAt": null,
      "currGroup": 0,
      "flectionId": "(ID:verb-flection3)",
    },
    {
      "changedAt": null,
      "currGroup": 0,
      "flectionId": "(ID:verb-flection4)",
    },
    {
      "changedAt": null,
      "currGroup": 0,
      "flectionId": "(ID:verb-flection5)",
    },
  ],
  "nextLessons": [
    {
      "currGroup": 1,
      "earliestAt": "(TS:tomorrow)",
      "flectionId": "(ID:verb-flection1)",
    },
    {
      "currGroup": 0,
      "earliestAt": "(TS:-5d)",
      "flectionId": "(ID:verb-flection2)",
    },
    {
      "currGroup": 0,
      "earliestAt": "(TS:yesterday)",
      "flectionId": "(ID:verb-flection3)",
    },
    {
      "currGroup": 0,
      "earliestAt": "(TS:-5d)",
      "flectionId": "(ID:verb-flection4)",
    },
    {
      "currGroup": 0,
      "earliestAt": "(TS:-5d)",
      "flectionId": "(ID:verb-flection5)",
    },
  ],
  "userId": "(ID:user1)",
  "wordId": "(ID:word1)",
}
`;

exports[`Test-data service "users" (4) has an [1;93masync[0;90m function [1;93mlistAllActiveWordsOfUser()[0;90m which - when used with valid ID - [0;92mresolves[0;90m as expected [-> check snapshot 4]: > all active-words of user1 < 1`] = `
[
  {
    "events": [
      {
        "timestamp": "(TS:-5d)",
        "type": "add",
      },
      {
        "flectionId": "(ID:verb-flection3)",
        "result": "wrong",
        "timestamp": "(TS:-2d)",
        "type": "flection-result",
      },
      {
        "flectionId": "(ID:verb-flection1)",
        "result": "correct",
        "timestamp": "(TS:yesterday)",
        "type": "flection-result",
      },
    ],
    "id": "(ID:user1-activeWord1)",
    "learnProgress": [
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:verb-flection1)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:verb-flection2)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:verb-flection3)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:verb-flection4)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:verb-flection5)",
      },
    ],
    "nextLessons": [
      {
        "currGroup": 1,
        "earliestAt": "(TS:tomorrow)",
        "flectionId": "(ID:verb-flection1)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:-5d)",
        "flectionId": "(ID:verb-flection2)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:yesterday)",
        "flectionId": "(ID:verb-flection3)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:-5d)",
        "flectionId": "(ID:verb-flection4)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:-5d)",
        "flectionId": "(ID:verb-flection5)",
      },
    ],
    "userId": "(ID:user1)",
    "wordId": "(ID:word1)",
  },
  {
    "events": [
      {
        "timestamp": "(TS:-3d)",
        "type": "add",
      },
      {
        "flectionId": "(ID:adjective-flection5)",
        "result": "correct",
        "timestamp": "(TS:-2d)",
        "type": "flection-result",
      },
      {
        "flectionId": "(ID:adjective-flection2)",
        "result": "wrong",
        "timestamp": "(TS:yesterday)",
        "type": "flection-result",
      },
      {
        "flectionId": "(ID:adjective-flection3)",
        "result": "correct",
        "timestamp": "(TS:-2min)",
        "type": "flection-result",
      },
    ],
    "id": "(ID:user1-activeWord2)",
    "learnProgress": [
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:adjective-flection1)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:adjective-flection2)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:adjective-flection3)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:adjective-flection4)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:adjective-flection5)",
      },
      {
        "changedAt": null,
        "currGroup": 0,
        "flectionId": "(ID:adjective-flection6)",
      },
    ],
    "nextLessons": [
      {
        "currGroup": 0,
        "earliestAt": "(TS:-3d)",
        "flectionId": "(ID:adjective-flection1)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:now)",
        "flectionId": "(ID:adjective-flection2)",
      },
      {
        "currGroup": 1,
        "earliestAt": "(TS:+1d 23h 58min)",
        "flectionId": "(ID:adjective-flection3)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:-3d)",
        "flectionId": "(ID:adjective-flection4)",
      },
      {
        "currGroup": 1,
        "earliestAt": "(TS:now)",
        "flectionId": "(ID:adjective-flection5)",
      },
      {
        "currGroup": 0,
        "earliestAt": "(TS:-3d)",
        "flectionId": "(ID:adjective-flection6)",
      },
    ],
    "userId": "(ID:user1)",
    "wordId": "(ID:word3)",
  },
]
`;
